# py-self-lensing

./: LICENSE  README.md  demo.ipynb  pyproject.toml
selflensing/: fitting.py  lombscargle.py
src/selflensing/: fitting.py  generators.py  lombscargle.py  models.py
